Relocate 'Nos avalie!' button to testimonials section
Moved the 'Nos avalie!' button to the testimonials section.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
             <button class="btn-primary btn-whatsapp-hero">
                 <i class="fab fa-whatsapp"></i> Marque seu horário
             </button>
-            <a class="btn-primary btn-eval" href="https://share.google/nlTZMRY33VHQcIs3V" target="_blank" rel="noopener">
-                <i class="fas fa-star"></i> Nos avalie!
-            </a>
+            <!-- Botão "Nos avalie" movido para a seção de depoimentos -->
         </div>
         <div class="hero-overlay"></div>
     </section>
@@ -242,6 +240,12 @@ Um espaço bem aconchegante e uma recepção maravilhosa! Amo esse lugar 😍"</
                     <strong>Nicolly Souza</strong>
                 </div>
             </div>
+                <!-- CTA para avaliações: botão 'Nos avalie!' -->
+                <div class="depoimentos-cta">
+                    <a class="btn-primary btn-eval" href="https://share.google/nlTZMRY33VHQcIs3V" target="_blank" rel="noopener">
+                        <i class="fas fa-star"></i> Nos avalie!
+                    </a>
+                </div>
         </div>
     </section>
 
