Update section titles and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <!-- Sobre -->
     <section id="sobre" class="sobre">
         <div class="container">
-            <h2 class="section-title">Conheça nosso espaço</h2>
-            <p class="section-subtitle">Ambiente projetado para seu conforto e bem-estar</p>
+            <h2 class="section-title">Conheça Essa Experiência</h2>
+            <p class="section-subtitle">Ambiente projetado para seu conforto. Procedimentos com atenção individualizada e direcionados ao seu bem-estar.</p>
             
             <div class="sobre-carousel">
                 <!-- Botões de navegação -->
@@ -120,10 +120,18 @@
                                 </div>
                                 <div class="sobre-card-content">
                                     <h3>Detox Corporal</h3>
-                                    <p>Espaço projetado para oferecer máximo conforto e privacidade durante seus tratamentos.</p>
+                                    <p>O detox corporal é um procedimento não invasivo, ideal para quem busca eliminar líquidos, toxinas, inchaço e melhorar a saúde vascular, pois atua diretamente no sistema linfático.</p>
                                     <div class="sobre-feature">
                                         <i class="fas fa-check"></i>
-                                        <span>Decoração acolhedora</span>
+                                        <span>Acelera o metabolismo</span>
+                                    </div>
+                                    <div class="sobre-feature">
+                                        <i class="fas fa-check"></i>
+                                        <span>Proporciona relaxamento muscular</span>
+                                    </div>
+                                    <div class="sobre-feature">
+                                        <i class="fas fa-check"></i>
+                                        <span>Melhora a elasticidade da pele</span>
                                     </div>
                                 </div>
                             </div>
@@ -137,11 +145,16 @@
                                 </div>
                                 <div class="sobre-card-content">
                                     <h3>Drenagem Linfática</h3>
-                                    <p>Utilizamos equipamentos modernos e técnicas atualizadas para melhores resultados.</p>
+                                    <p>Sua principal função é acelerar o processo de retirada de líquidos acumulados em locais indesejados. Estimula a regeneração dos tecidos, além de melhorar a ação anti-inflamatória do organismo.</p>
                                     <div class="sobre-feature">
                                         <i class="fas fa-check"></i>
-                                        <span>Equipamentos certificados</span>
+                                        <span>Melhora o sistema imunitário</span>
                                     </div>
+                                    <div class="sobre-feature">
+                                        <i class="fas fa-check"></i>
+                                        <span>Combate a celulite e a gordura localizada</span>
+                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -154,10 +167,14 @@
                                 </div>
                                 <div class="sobre-card-content">
                                     <h3>Massagem Turbinada</h3>
-                                    <p>Cada cliente recebe atenção individualizada e tratamentos adaptados às suas necessidades.</p>
+                                    <p>Com a massagem turbinada, ativamos a circulação e melhoramos o contorno corporal. Cada cliente recebe atenção individualizada e tratamentos adaptados às suas necessidades.</p>
                                     <div class="sobre-feature">
                                         <i class="fas fa-check"></i>
-                                        <span>Avaliação personalizada</span>
+                                        <span>Modela o corpo</span>
+                                    </div>
+                                    <div class="sobre-feature">
+                                        <i class="fas fa-check"></i>
+                                        <span>Combate a celulite</span>
                                     </div>
                                 </div>
                             </div>
@@ -171,10 +188,14 @@
                                 </div>
                                 <div class="sobre-card-content">
                                     <h3>Massagem Desportiva</h3>
-                                    <p>Trabalhamos apenas com produtos de alta qualidade, testados e aprovados dermatologicamente.</p>
+                                    <p>A massagem desportiva é uma técnica indicada para atletas amadores ou profissionais, pois ela trabalha com a manipulação e reabilitação dos tecidos moles do corpo, incluindo músculos, ligamentos e tendões.</p>
                                     <div class="sobre-feature">
                                         <i class="fas fa-check"></i>
-                                        <span>Marcas reconhecidas</span>
+                                        <span>Previne lesões</span>
+                                    </div>
+                                    <div class="sobre-feature">
+                                        <i class="fas fa-check"></i>
+                                        <span>Reduz edemas e processos inflamatórios</span>
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +223,7 @@
     <!-- Depoimentos -->
     <section id="depoimentos" class="depoimentos">
         <div class="container">
-            <h2 class="section-title">O que nossas clientes dizem</h2>
+            <h2 class="section-title">O que nossos clientes dizem</h2>
             <p class="section-subtitle">Histórias de satisfação e transformação</p>
             <div class="depoimentos-grid">
                 <div class="depoimento-card">
