Replace service icons with images in index.html

--- a/index.html
+++ b/index.html
@@ -54,37 +54,43 @@
             <p class="section-subtitle">Cuidados especializados para sua saúde e bem-estar</p>
             <div class="servicos-grid">
                 <div class="servico-card">
-                    <div class="servico-icon">💆‍♀️</div>
+                    <div class="servico-icon">
+                        <img src="assets/modeladora.jpeg" alt="Massagem Modeladora" class="servico-img">
+                    </div>
                     <h3>Massagem Modeladora</h3>
                     <p>Redução de medidas e firmeza da pele com técnicas profissionais.</p>
                 </div>
                 <div class="servico-card">
-                    <div class="servico-icon">⚡</div>
+                    <div class="servico-icon">
+                        <img src="assets/turbinada.jpeg" alt="Massagem Turbinada" class="servico-img">
+                    </div>
                     <h3>Massagem Turbinada</h3>
                     <p>Massagem intensiva para revitalização completa do corpo.</p>
                 </div>
                 <div class="servico-card">
                     <div class="servico-icon">
-                        <img src="assets/limpeza.webp" alt="Ícone Limpeza de Pele" style="width:1em;height:1em;object-fit:contain;display:inline-block;vertical-align:middle;">
+                        <img src="assets/Limpeza de Pele.jpeg" alt="Limpeza de Pele" class="servico-img">
                     </div>
                     <h3>Limpeza de Pele</h3>
                     <p>Tratamento facial profundo para pele hidratada e radiante.</p>
                 </div>
                 <div class="servico-card">
                     <div class="servico-icon">
-                        <img src="assets/pé.png" alt="Ícone SPA dos Pés" style="width:1em;height:1em;object-fit:contain;display:inline-block;vertical-align:middle;">
+                        <img src="assets/spa dos pés.jpeg" alt="SPA dos Pés" class="servico-img">
                     </div>
                     <h3>SPA dos Pés</h3>
                     <p>Cuidado completo e relaxante para seus pés.</p>
                 </div>
                 <div class="servico-card">
-                    <div class="servico-icon">🔥</div>
+                    <div class="servico-icon">
+                        <img src="assets/termoterapia.png" alt="Termoterapia" class="servico-img">
+                    </div>
                     <h3>Termoterapia</h3>
                     <p>Terapia térmica para alívio de dores e relaxamento profundo.</p>
                 </div>
                 <div class="servico-card">
                     <div class="servico-icon">
-                        <img src="assets/ventosa.webp" alt="Ícone Ventosaterapia" style="width:1.5em;height:1.5em;object-fit:contain;display:inline-block;vertical-align:middle;">
+                        <img src="assets/Ventosaterapia.jpeg" alt="Ventosaterapia" class="servico-img">
                     </div>
                     <h3>Ventosaterapia</h3>
                     <p>Técnica milenar para circulação e bem-estar geral.</p>
